# lit-bridge-rs

./: CHANGELOG.md  CLA.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: parity.rs  wraptest.rs
scripts/: attach.py  classify_all.py  conformance.py  demo_claude.py  dogfood.py
src/: diag.rs  jsonl.rs  lib.rs  main.rs  reflow.rs  session.rs
src/parser/: README.md  mod.rs  registry.rs
src/parser/claude/: mod.rs  v2_1.rs
tests/: extract_raw_response_regression.rs  parity.rs  reflow_golden.rs  reflow_wiring.rs
tests/fixtures/: claude_2.1.x_dialog.txt  claude_2.1.x_idle.txt  claude_2.1.x_responding.txt  claude_2.1.x_thinking.txt  claude_2.1.x_thinking_first_talking.txt  claude_2.1.x_tool_use.txt
